tests/ui/rfcs/rfc-0000-never_patterns/bindings.stderr
error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:17:15
   |
LL |         Err(&(_a, _b, !)),
   |               ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:17:19
   |
LL |         Err(&(_a, _b, !)),
   |                   ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:22:25
   |
LL |         Ok(_ok) | Err(&(_a, _b, !)) => {}
   |                         ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:22:29
   |
LL |         Ok(_ok) | Err(&(_a, _b, !)) => {}
   |                             ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:35:10
   |
LL |     let (_a, (! | !)) = (true, void);
   |          ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:39:9
   |
LL |     let _a @ ! = void;
   |         ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:42:10
   |
LL |     let (_a @ (), !) = ((), void);
   |          ^^ help: use a wildcard `_` instead

error: never patterns cannot contain variable bindings
  --> $DIR/bindings.rs:45:14
   |
LL |             (_b @ (_, !))) = (true, void);
   |              ^^ help: use a wildcard `_` instead

error: aborting due to 8 previous errors

